--- a/Sections/Harmonic-functions-in-E.tex
+++ b/Sections/Harmonic-functions-in-E.tex
@@ -1,4 +1,4 @@
-This chapter will consider the main result of the Dirichlet problem in the half-space for Laplace's equation. I will only consider here the tangential convergence, where the limit is taken tangentially towards the boundary value. All of this chapter follows closely the results by Stein and Weiss from \cite{stein_weiss}.
+This chapter will consider the main result of the Dirichlet problem in the half-space for Laplace's equation. I will only consider here the tangential convergence, where the limit is taken tangentially towards the boundary value. All of this chapter follows closely the results by Stein and Weiss \cite{stein_weiss}.
 
 I will start the chapter by first introducing some new, necessary constructs that are used in the main result: Theorem \ref{thm:2.3}. This result, together with Theorem \ref{thm:21a}, provides a way to lift the problem from the boundary $\RR^n$ to the half space $\RR^{n+1}_+$, where the extension is harmonic; consequently, the results from harmonic functional analysis apply to the problem. First, Theorem \ref{thm:21a} will show that $L^p$ functions behave as desired, and the Poisson integral converges towards the function at the boundary $\RR^n\times\{0\}$. Then Theorem \ref{thm:2.3} will extend this result to apply to a broader class of finite Borel measures.
 
@@ -241,7 +241,7 @@ First of all, the measure $\mu\in\mathcal M(\RR^{n})$ requires a new definition 
     for $E\subset X$. The total variation norm $\|\mu\|=|\mu|(X)$ is the total variation measure throughout the space.
 \end{definition}
 
-The total variation is a measure, and the total variation norm is a norm as provided in \cite{axler_measure_2019}. The total variation of a measure can be seen as an extension of the concept of absolute value to measures from functions. It attempts to encode the ``size'' of a measure by disregarding the sign.
+The total variation is a measure, and the total variation norm is a norm as provided in Axler's \textit{Measure, Integration \& Real Analysis} \cite{axler_measure_2019}. The total variation of a measure can be seen as an extension of the concept of absolute value to measures from functions. It attempts to encode the ``size'' of a measure by disregarding the sign.
 
 As the convergence concept used in theorem \ref{thm:21a} was $L^p$ convergence in the norm, that is also out of question now. For that reason, a new type of convergence is introduced.
 
