--- a/mat-thesis-template.tex
+++ b/mat-thesis-template.tex
@@ -81,7 +81,7 @@ Petri Ola\\
 
 \noindent\textbf{Otsikko:} Harmoninen laajennus puoliavaruuteen\\ % Otsikko / Titel
 \textbf{Kirjoittaja:} Santeri Väätäjä\\ % Tekijä / Författare
-\textbf{Vuosi ja kuukausi:} Kesäkuu 2025\\ % Aika / Datum
+\textbf{Kuukausi ja vuosi:} Kesäkuu 2025\\ % Aika / Datum
 \textbf{Sivumäärä:} \pageref*{LastPage}~s.\\[1em] % Sivumäärä: XX~s. / Sidoantal: XX~s.
 % The page count is updated automatically, but it might require two compilations to be correct.
 % If you customize the backmatter, this might become incorrect - check and correct manually if needed.
