--- a/mat-thesis-template.tex
+++ b/mat-thesis-template.tex
@@ -88,7 +88,7 @@ Petri Ola\\
 
 % If you include an abstract in a different language, wrap it in a foreignlanguage block
 \noindent\textbf{Tiivistelmä:}\\ % Tiivistelmä / Referat
-Tutkielma käsittelee Dirichlet ongelmaa, jossa tavoitteena on laajentaa reuna-arvot määrittelevä funktio $n$-ulotteisesta Euklidisesta avaruudesta $n+1$-ulotteiseen puoliavaruuteen siten, että laajennus on harmoninen ja siten ratkaisee Laplacen yhtälön. Tätä kohti tutkielmassa edetään esittelmällä Fourier muunnos ja käyttämällä sitä avuksi Poisson ytimen johtamisessa. Poisson ydintä käytetään Poisson integraalin määrittämiseen, joka muodostaa eksplisiittisen muodon Dirichlet ongelman ratkaisulle, kun ratkottava osittaisdifferentaaliyhtälö on Laplacen yhtälö.
+Tutkielma käsittelee Dirichlet ongelmaa, jossa tavoitteena on laajentaa reuna-arvot määrittelevä funktio $n$-ulotteisesta Euklidisesta avaruudesta $n+1$-ulotteiseen puoliavaruuteen siten, että laajennus on harmoninen ja siten ratkaisee Laplacen yhtälön. Tätä kohti tutkielmassa edetään esittelmällä Fourier muunnos ja käyttämällä sitä avuksi Poisson ytimen johtamisessa. Poisson ydintä käytetään Poisson integraalin määrittämiseen. Tämä muodostaa eksplisiittisen muodon Dirichlet ongelman ratkaisulle, kun ratkottava osittaisdifferentaaliyhtälö on Laplacen yhtälö.
 
 Tutkielmassa on kaksi päätulosta. Näistä ensimmäinen todistaa, että Poisson integraali toteuttaa reuna-arvo ongelman kun reuna-arvot määräytyvät funktiosta, joka kuuluu $L^p$-avaruuteen. Tätä tulosta täydennetään lisätuloksella, jonka avulla voidaan näyttää, että ratkaisun suppeneminen noudattaa vahvempaa suppenemiskäsitettä silloin, kun reuna-arvot määrittävä funktio kuuluu tiukemmat säännöllisyysvaatimukset toteuttavaan funktiavaruuteen. Toinen tutkielman päätuloksista laajentaa ensimmäistä tulosta vastaavan tuloksen koskemaan myös ääreellisiä Borel mittoja. Tämä mahdollista monipuolisemman reuna-arvo datan käyttämisen reuna-arvo ongelmassa.
 
