--- a/Sections/Introduction.tex
+++ b/Sections/Introduction.tex
@@ -3,6 +3,6 @@ This thesis is a study of results in the field of harmonic and Fourier analysis.
 The investigated problem is a special case of Dirichlet's problem. Dirichlet's problem poses a question: can we find a solution for a partial differential equation (PDE), such that it converges to some specified function at the boundary of the space? In this thesis, I consider Laplace's equation as the PDE, and the space will be the Euclidean half-space $\RR^n\times\RR_+=\RR^{n+1}_+$.
 
 This question relates to many areas of mathematical analysis of PDEs \cite{evans, John1978} and is deeply connected to mathematical physics \cite{hilbert}. In mathematics, these types of results are frequently used in the analysis of PDEs to extend certain weaker solution concepts to boundary value problems. This allows for the embedding of less regular initial value data, which may not satisfy the boundary condition in the classical sense of functions. These are connected to physical problems through potential theory, where, for example, gravitational and electrostatic potentials can be described by harmonic functions as described in \textit{Methods of Mathematical Physics: Volume
-II Partial Differential Equations.} by Hilbert and Courant \cite{hilbert}.
+II Partial Differential Equations} by Hilbert and Courant \cite{hilbert}.
 
 The rest of this introduces some of the essential tools that are used in the construction of the Poisson kernel in Chapter \ref{ch:2}. This also includes showing some properties of the Poisson kernel that will be needed later. Chapter \ref{ch:3} will concentrate on the main results of this thesis. First, I will show that the Poisson integral extends the boundary value function in $L^p$ to the half-space. The second part will extend this result to include finite Borel measures.
