--- a/mat-thesis-template.tex
+++ b/mat-thesis-template.tex
@@ -81,6 +81,7 @@ Petri Ola\\
 
 \noindent\textbf{Otsikko:} Harmoninen laajennus puoliavaruuteen\\ % Otsikko / Titel
 \textbf{Kirjoittaja:} Santeri Väätäjä\\ % Tekijä / Författare
+\textbf{Opiskelijanumero:} 015024877 \\
 \textbf{Kuukausi ja vuosi:} Kesäkuu 2025\\ % Aika / Datum
 \textbf{Sivumäärä:} \pageref*{LastPage}~s.\\[1em] % Sivumäärä: XX~s. / Sidoantal: XX~s.
 % The page count is updated automatically, but it might require two compilations to be correct.
@@ -88,11 +89,11 @@ Petri Ola\\
 
 % If you include an abstract in a different language, wrap it in a foreignlanguage block
 \noindent\textbf{Tiivistelmä:}\\ % Tiivistelmä / Referat
-Tutkielma käsittelee Dirichlet ongelmaa, jossa tavoitteena on laajentaa reuna-arvot määrittelevä funktio $n$-ulotteisesta Euklidisesta avaruudesta $n+1$-ulotteiseen puoliavaruuteen siten, että laajennus on harmoninen ja siten ratkaisee Laplacen yhtälön. Tätä kohti tutkielmassa edetään esittelmällä Fourier muunnos ja käyttämällä sitä avuksi Poisson ytimen johtamisessa. Poisson ydintä käytetään Poisson integraalin määrittämiseen. Tämä muodostaa eksplisiittisen muodon Dirichlet ongelman ratkaisulle, kun ratkottava osittaisdifferentaaliyhtälö on Laplacen yhtälö.
+Tutkielma käsittelee Dirichlet-ongelmaa, jossa tavoitteena on laajentaa reuna-arvot määrittelevä funktio $n$-ulotteisesta Euklidisesta avaruudesta $n+1$-ulotteiseen puoliavaruuteen siten, että laajennus on harmoninen ja siten ratkaisee Laplacen-yhtälön. Tätä kohti tutkielmassa edetään esittelmällä Fourier-muunnos ja käyttämällä sitä avuksi Poisson-ytimen johtamisessa. Poisson-ydintä käytetään Poisson-integraalin määrittämiseen. Tämä muodostaa eksplisiittisen muodon Dirichlet-ongelman ratkaisulle, kun ratkottava osittaisdifferentaaliyhtälö on Laplacen-yhtälö.
 
-Tutkielmassa on kaksi päätulosta. Näistä ensimmäinen todistaa, että Poisson integraali toteuttaa reuna-arvo ongelman kun reuna-arvot määräytyvät funktiosta, joka kuuluu $L^p$-avaruuteen. Tätä tulosta täydennetään lisätuloksella, jonka avulla voidaan näyttää, että ratkaisun suppeneminen noudattaa vahvempaa suppenemiskäsitettä silloin, kun reuna-arvot määrittävä funktio kuuluu tiukemmat säännöllisyysvaatimukset toteuttavaan funktiavaruuteen. Toinen tutkielman päätuloksista laajentaa ensimmäistä tulosta vastaavan tuloksen koskemaan myös ääreellisiä Borel mittoja. Tämä mahdollista monipuolisemman reuna-arvo datan käyttämisen reuna-arvo ongelmassa.
+Tutkielmassa on kaksi päätulosta. Näistä ensimmäinen todistaa, että Poisson-integraali toteuttaa reuna-arvo-ongelman kun reuna-arvot määräytyvät funktiosta, joka kuuluu $L^p$-avaruuteen. Tätä tulosta täydennetään lisätuloksella, jonka avulla voidaan näyttää, että ratkaisun suppeneminen noudattaa vahvempaa suppenemiskäsitettä silloin, kun reuna-arvot määrittävä funktio kuuluu tiukemmat säännöllisyysvaatimukset toteuttavaan funktiavaruuteen. Toinen tutkielman päätuloksista laajentaa ensimmäistä tulosta vastaavan tuloksen koskemaan myös ääreellisiä Borel-mittoja. Tämä mahdollista monipuolisemman reuna-arvodatan käyttämisen reuna-arvo-ongelmassa.
 
-Nämä tulokset antavat eksplisiittisen integrallimuodon funktiolle, joka ratkaisee halutun Dirichlet ongelman. Tulokset valottaa myös sitä miten harmoniset laajennukset käyttäytyvät, kun reuna-arvot määrittävän funktion säännöllisyydelle oletetaan erilaisia ehtoja. Lisäksi tämän kaltaisilla tuloksilla on sovelluksia monissa erilaisissa matematiikan ja fysiikan sovelluksissa. Tuloksia voidaan käyttää esimerkiksi osittaisdifferentaaliyhtälöiden analyysissä ja potentiaaliteoriassa. Työn lopussa käyn läpi vielä joitakin mahdollisia yleistyksiä, joihin tuloksia on mahdollista laajentaa.
+Nämä tulokset antavat eksplisiittisen integraallimuodon funktiolle, joka ratkaisee halutun Dirichlet-ongelman. Tulokset valottaa myös sitä miten harmoniset laajennukset käyttäytyvät, kun reuna-arvot määrittävän funktion säännöllisyydelle oletetaan erilaisia ehtoja. Lisäksi tämän kaltaisilla tuloksilla on sovelluksia monissa erilaisissa matematiikan ja fysiikan sovelluksissa. Tuloksia voidaan käyttää esimerkiksi osittaisdifferentaaliyhtälöiden analyysissä ja potentiaaliteoriassa. Työn lopussa käyn läpi vielä joitakin mahdollisia yleistyksiä, joihin tuloksia on mahdollista laajentaa.
 
 \vfill
 
@@ -101,6 +102,7 @@ Nämä tulokset antavat eksplisiittisen integrallimuodon funktiolle, joka ratkai
 \clearpage
 \noindent\textbf{Title:} Harmonic Extension at the Boundary of Half-Space\\ % Otsikko / Titel
 \textbf{Author:} Santeri Väätäjä\\ % Tekijä / Författare
+\textbf{Student number:} 015024877 \\
 \textbf{Month and year:} June 2025\\ % Aika / Datum
 \textbf{Page count:} \pageref*{LastPage}~pp.\\[1em] % Sivumäärä: XX~s. / Sidoantal: XX~s.
 % The page count is updated automatically, but it might require two compilations to be correct.
